# ifrs_parser_fork

./: .gitignore  README.md  pyproject.toml
config/: metrics.example.json  sheets_export.example.json
docs/: google_sheets_setup.md
src/ifrs_parser/: __init__.py  api.py  cli.py  compare_excel.py  metrics.py  parser.py  sheets_export.py  sheets_init.py  telegram_bot.py
